added rope crafting and oredictionary support along with rop shield recipe and shieldmenu

--- a/src/main/resources/assets/test_procedurcese/lang/en_us.lang
+++ b/src/main/resources/assets/test_procedurcese/lang/en_us.lang
@@ -2,6 +2,8 @@ tile.rope.name=Rope
 advancements.ropeshieldunlock.title=Rope Shield Unlock
 advancements.leafshield.descr=test
 key.mcreator.activateshieldpower=Activate Shield Power
+key.mcreator.shieldmenuopen=Shield Menu Open
+item.ropeitem.name=Rope
 key.mcreator.shieldpowerup=Shield Power Select UP
 advancements.ropeshieldunlock.descr=Unlocks Air Stike Shield
 key.mcreator.deactivateshieldpower=Deactivate Shield Power
